<resources>
    <string name="app_name">Unigakkk</string>
    <string name="group_1">Group1</string>
    <string name="group_2">Group2</string>
    <string name="group_3">Group3</string>
    <string name="group_4">Group4</string>
    <string name="group_5">Group5</string>
    <string name="group_6">Group6</string>
    <string name="group_7">Group7</string>
    <string name="group_8">Group8</string>
</resources>