<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_5"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/f"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_6"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/g"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_7"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/h"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#808080"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_8"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</LinearLayout>